# attoRedis

./: Cargo.toml  README.md
.github/workflows/: build.yml
client/: Cargo.toml  README.md
client/src/: main.rs
server/: Cargo.toml  README.md
server/src/: main.rs  request.rs  response.rs
