[package]
name = "attoredis-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1.14"
futures = "0.3.30"
bytes = "1.5.0"
